[package]
name = "osmrender"
version = "0.1.0"
edition = "2024"

[dependencies]
osmpbf = "0.3.8"
rayon = "1.11.0"
image = "0.25"
embedded-gfx = { path = "embedded-gfx" }
embedded-graphics = "0.8"
embedded-graphics-core = "0.4"
nalgebra = {version = "0.32.3", default-features = false, features = [ "libm" ] }
earcut = "0.4.4"
postcard = { version = "1.1.3", features = ["use-std"]}
serde = "1.0.228"
bincode = { version = "2.0.1", features = ["alloc"] }
log = "0.4.29"
env_logger = "0.11.8"
embedded-graphics-simulator = "0.8.0"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-Clink-arg=-Wl,--no-rosegment"]

[profile.release]
debug = true
#lto = true